# fhl-rps-android

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/microsoft/fhldemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fhldemo.cpp
app/src/main/java/com/microsoft/fhldemo/: Home.kt  MainActivity.kt  RPSNative.java  Result.kt  RockPaperScissors.kt
app/src/main/res/layout/: activity_main.xml  activity_rock_paper_scissors.xml  fragment_home.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/microsoft/fhldemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rpsnative/: build.gradle
rpsnative/src/androidTest/java/com/microsoft/rpsnative/: ExampleInstrumentedTest.kt
rpsnative/src/main/cpp/: CMakeLists.txt  rpsnative.cpp  rpsnative.h
rpsnative/src/main/java/com/microsoft/rpsnative/: Move.kt  Result.kt
rpsnative/src/test/java/com/microsoft/rpsnative/: ExampleUnitTest.kt
